# ch58x-hal

./: .gitignore  Cargo.toml  README.md  build.rs  link.x  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: adc_pin.rs  adc_temp.rs  ble-blinky.rs  ble-broadcaster.rs  ble-led-button.rs  ble-peripheral-devinfo.rs  ble-peripheral-simple.rs  ble-peripheral.rs  ble-scanner.rs  blinky copy.rs  blinky.rs  embassy-ble-broadcaster.rs  embassy-ble-scan.rs  embassy-ble-scanner.rs  embassy-blinky.rs  embassy-gpio.rs  empty.rs  flashisp.rs  gpio_int.rs  hardfault.rs  i2c-mpu6050.rs  serial.rs  spi-ssd1306.rs  systick_int.rs  uart-echo.rs  yd-ch582m.rs
src/: adc.rs  critical_section.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  interrupt.rs  isp.rs  lcd.rs  lib.rs  peripheral.rs  peripherals.rs  prelude.rs  rt.rs  rtc.rs  serial.rs  signature.rs  spi.rs  sysctl.rs  systick.rs  timer.rs  traits.rs  uart.rs
src/ble/: ffi.rs  gap.rs  gapbondmgr.rs  gatt.rs  gatt_uuid.rs  gattservapp.rs  linkdb.rs  mod.rs
src/embassy/: mod.rs  time_driver.rs  time_driver_systick.rs
