[package]
name = "ch58x-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ch58x = { version = "0.1.8", features = ["ch58x", "rt"] }
# They are sharing almost the same SVD, so we can use the same crate.
ch59x = { name = "ch59x", path = "../ch32-rs-nightlies/ch59x", version = "0.1.7", features = [
    "ch59x",
    #"rt",
] }
fugit = "0.3.7"
fugit-timer = "0.1.3"

riscv = { version = "0.10.1" }

nb = "1.1.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-alpha = { version = "=1.0.0-rc.1", package = "embedded-hal" }
# qingke = "0.1.1"
qingke = { path = "../qingke" }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }

# ch32v-rt-macros = { path = "../ch32v-rt/ch32v-rt-macros" }
ch32v-rt = { path = "../ch32v-rt" }
embedded-hal-nb = "1.0.0-rc.1"


#  optional = true
# embassy-time = { version = "0.1.3", features = ["nightly"] }

[dev-dependencies]
panic-halt = "0.2.0"
# riscv-rt = "0.11.0"

[features]
default = []
defmt = []
isp = []

[profile.release]
# panic = "abort"
# panic = "unwind"
# lto = true
# strip = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
