[package]
name = "ch58x-hal"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/ch58x-hal"
documentation = "https://docs.rs/ch58x-hal"
homepage = "https://github.com/ch32-rs/ch58x-hal"
categories = ["hardware-support", "embedded", "no-std"]
description = ""
keywords = []
readme = "README.md"
license = "MIT/Apache-2.0"


[dependencies]
ch58x = { version = "0.2.0", path = "../ch32-rs-nightlies/ch58x", features = [
    "ch58x",
] }

fugit = "0.3.7"
fugit-timer = "0.1.3"

riscv = { version = "0.10.1" }

nb = "1.1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { version = "=1.0.0-rc.1", package = "embedded-hal" }
# qingke = "0.1.1"
qingke = { path = "../qingke" }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }

ch32v-rt = { version = "0.0.0", path = "../ch32v-rt" }
embedded-hal-nb = "1.0.0-rc.1"
embassy-time = { version = "0.1.5", features = [
    "nightly",
    "tick-hz-32_768",
], optional = false }


[dev-dependencies]
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
panic-halt = "0.2.0"
# riscv-rt = "0.11.0"
ssd1306 = "0.8.3"

embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }

[features]
default = []
defmt = []
isp = []

[profile.release]
# panic = "abort"
# panic = "unwind"
# lto = true
# strip = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
