[package]
name = "ch58x-hal"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/ch58x-hal"
documentation = "https://docs.rs/ch58x-hal"
homepage = "https://github.com/ch32-rs/ch58x-hal"
categories = ["embedded", "no-std"]
description = "HAL for the CH583/CH582/CH581 RISC-V BLE microcotrollers from WCH"
keywords = ["embedded-hal", "embassy", "ch582", "ch581", "ch583"]
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = ["ble", "embassy"]
embassy = ["dep:embassy-time", "dep:embassy-sync"]
ble = []

[dependencies]
#ch58x = { version = "0.2.0", path = "../ch32-rs-nightlies/ch58x", features = [
#    "ch58x",
#] }
ch58x = { version = "0.2.0", features = ["ch58x"] }

riscv = "0.10.1"
qingke = "0.1.2"
# ch32v-rt = { version = "0.0.2", path = "../ch32v-rt" }
ch32v-rt = "0.0.2"
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }

fugit = "0.3.7"
nb = "1.1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { version = "=1.0.0-rc.2", package = "embedded-hal" }
embedded-hal-nb = "1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"

# embassy time driver
embassy-time = { version = "0.2.0", features = [
    "tick-hz-32_768",
], optional = true }
embassy-sync = { version = "0.5.0", optional = true }

[dev-dependencies]
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
panic-halt = "0.2.0"
ssd1306 = "0.8.3"

embassy-futures = "0.1.1"
embassy-executor = { version = "0.4.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
heapless = "0.8.0"
embedded-alloc = "0.5.0"
embedded-sdmmc = "0.6.0"

[profile.release]
# panic = "unwind"
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
